--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,65 +7,65 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="Level 1"
-android:textColor="@color/text_white"
-    android:textSize="24sp"
-    android:layout_marginTop="10dp"
-    android:id="@+id/level_text"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Level 1"
+        android:textColor="@color/text_white"
+        android:textSize="24sp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/level_text"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-<LinearLayout
-android:id="@+id/game"
-android:layout_width="match_parent"
-android:layout_height="0dp"
-android:layout_weight="1"
-android:orientation="vertical"
-android:gravity="center"
-app:layout_constraintTop_toBottomOf="@id/level_text"
-app:layout_constraintBottom_toTopOf="@id/mode_btn"/>
+    <LinearLayout
+        android:id="@+id/game"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/level_text"
+        app:layout_constraintBottom_toTopOf="@id/mode_btn"/>
 
-<ImageButton
-android:id="@+id/mode_btn"
-android:layout_width="60dp"
-android:layout_height="60dp"
-android:background="@drawable/circle_background"
-android:src="@drawable/draw_pencil_tool"
-    android:scaleType="fitCenter"
-    app:layout_constraintTop_toBottomOf="@id/game"
-    app:layout_constraintBottom_toTopOf="@id/button_container"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
+    <ImageButton
+        android:id="@+id/mode_btn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/circle_background"
+        android:src="@drawable/pencil_tool_icon"
+        android:scaleType="fitCenter"
+        app:layout_constraintTop_toBottomOf="@id/game"
+        app:layout_constraintBottom_toTopOf="@id/button_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-<LinearLayout
-android:id="@+id/button_container"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
-android:gravity="center"
-android:layout_marginBottom="10dp"
-app:layout_constraintBottom_toBottomOf="parent">
+    <LinearLayout
+        android:id="@+id/button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-<Button
-    android:id="@+id/hint_btn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="💡"
-    android:textColor="@color/text_white"
-    android:backgroundTint="@color/darker_gray"
-android:layout_margin="5dp"/>
+        <ImageButton
+            android:id="@+id/hint_btn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/circle_background"
+            android:src="@drawable/hint_icon"
+            android:scaleType="fitCenter"
+            android:layout_margin="5dp"/>
 
-<Button
-    android:id="@+id/giveupbtn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Give Up?"
-    android:textColor="@color/text_white"
-    android:backgroundTint="@color/red_button"
-android:layout_margin="5dp"/>
-</LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/giveupbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Give Up?"
+            android:textColor="@color/text_white"
+            android:backgroundTint="@color/red_button"
+            android:layout_margin="5dp"/>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
