--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,94 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/game_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_black"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/background_black">
 
-    <!-- LinearLayout עבור הלבבות -->
+    <!-- טיימר בצד שמאל -->
+    <TextView
+        android:id="@+id/timer_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="00:00"
+        android:textSize="20sp"
+        android:textColor="@color/text_white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- לבבות במרכז -->
     <LinearLayout
-        android:id="@+id/hearts_container"
+        android:id="@+id/hearts_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/heart1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/heart_icon"
-            android:layout_marginEnd="5dp"/>
+            app:tint="@color/red_button" />
 
         <ImageView
             android:id="@+id/heart2"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/heart_icon"
-            android:layout_marginEnd="5dp"/>
+            app:tint="@color/red_button" />
 
         <ImageView
             android:id="@+id/heart3"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/heart_icon"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/heart_icon"
+            app:tint="@color/red_button" />
     </LinearLayout>
 
-    <!-- LinearLayout עבור הלוח -->
     <LinearLayout
         android:id="@+id/game"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_margin="16dp"
+        android:background="@color/background_black"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/hearts_container"
-        app:layout_constraintBottom_toTopOf="@id/mode_btn"/>
-
-    <!-- ImageButton עבור החלפת מצבים -->
-    <ImageButton
-        android:id="@+id/mode_btn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/circle_background"
-        android:src="@drawable/pencil_tool_icon"
-        android:scaleType="fitCenter"
-        app:layout_constraintTop_toBottomOf="@id/game"
-        app:layout_constraintBottom_toTopOf="@id/button_container"
+        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/hearts_layout" />
 
-    <!-- LinearLayout עבור הכפתורים התחתונים -->
     <LinearLayout
-        android:id="@+id/button_container"
-        android:layout_width="match_parent"
+        android:id="@+id/buttons_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/mode_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/circle_background"
+            android:backgroundTint="@color/darker_gray"
+            android:src="@drawable/pencil_tool_icon"
+            android:scaleType="centerInside" />
 
         <ImageButton
             android:id="@+id/hint_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/circle_background"
+            android:backgroundTint="@color/darker_gray"
             android:src="@drawable/hint_icon"
-            android:scaleType="fitCenter"
-            android:layout_margin="5dp"/>
+            android:scaleType="centerInside" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/giveupbtn"
+            style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Give Up?"
-            android:textColor="@color/text_white"
-            android:backgroundTint="@color/red_button"
-            android:layout_margin="5dp"/>
+            android:backgroundTint="@color/danger_button"
+            android:text="Give Up"
+            android:textColor="@color/text_white" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
